[package]
name = "imbue"
version = "0.1.2"
edition = "2018"
license = "MIT"
repository = "https://github.com/JSextonn/imbue"
description = "Lightning quick dataset imbuing framework for making sure your data is ready for presentation!"
readme = "README.md"

[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
